fix ios cropped scroll area

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -72,7 +72,7 @@ body {
   left: 0;
   box-sizing: border-box;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   overflow: scroll;
   scroll-snap-type: y proximity;
   display: flex;
